# teste_docker

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
djangoapp/project/: settings.py
scripts/: commands.sh
