[project]
name = "docker-testes"
version = "0.1.0"
description = "Testando o Docker com UV e Django."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.15,<5.3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

# ADICIONE ESTE BLOCO ABAIXO (Requisito do uv sync para aplicações web)
[tool.uv]
managed = true
package = false
